RESOLVED FIXED102034
[BlackBerry] NetworkJob should not check if data is received with HEAD
https://bugs.webkit.org/show_bug.cgi?id=102034
Summary [BlackBerry] NetworkJob should not check if data is received with HEAD
Joe Mason
Reported 2012-11-12 18:44:54 PST
shouldNotifyClientFailed checks if a failure status has been received, and data has been received. The "data has been received" part of the check should not apply for HEAD, since obviously no data is ever received for HEAD.
Attachments
fix (6.11 KB, patch)
2012-11-12 19:54 PST, Joe Mason
no flags
Joe Mason
Comment 1 2012-11-12 19:54:01 PST
WebKit Review Bot
Comment 2 2012-11-12 22:29:23 PST
Comment on attachment 173799 [details] fix Clearing flags on attachment: 173799 Committed r134364: <http://trac.webkit.org/changeset/134364>
WebKit Review Bot
Comment 3 2012-11-12 22:29:26 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.