[BlackBerry] NetworkJob should not check if data is received with HEAD https://bugs.webkit.org/show_bug.cgi?id=102034

Patch by Joe Mason <jmason@rim.com> on 2012-11-12
Reviewed by George Staikos.

Internal PR: 241391

.:

Add test that HEAD XMLHttpRequests return status 404 instead of calling onerror.

* ManualTests/blackberry/head-xhr-nonexistant-file.html: Added.

Source/WebCore:

Make HEAD requests call didFinish instead of didFail on a 404 response, even though they
have no data.

Tests: ManualTests/blackberry/head-xhr-nonexistant-file.html

* platform/network/blackberry/NetworkJob.cpp:
(WebCore::NetworkJob::NetworkJob):
(WebCore::NetworkJob::initialize):
(WebCore::NetworkJob::shouldNotifyClientFailed):
* platform/network/blackberry/NetworkJob.h:
(NetworkJob):

Canonical link: https://commits.webkit.org/120105@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@134364 268f45cc-cd09-0410-ab3c-d52691b4dbfc